@@ -22,6 +22,7 @@ return array(
 	'tx_solr_additionalfieldsindexer' => $extensionPath . 'classes/class.tx_solr_additionalfieldsindexer.php',
 	'tx_solr_commandresolver' => $extensionPath . 'classes/class.tx_solr_commandresolver.php',
 	'tx_solr_connectionmanager' => $extensionPath . 'classes/class.tx_solr_connectionmanager.php',
+	'tx_solr_garbagecollector' => $extensionPath . 'classes/class.tx_solr_garbagecollector.php',
 	'tx_solr_indexer' => $extensionPath . 'classes/class.tx_solr_indexer.php',
 	'tx_solr_indexerselector' => $extensionPath . 'classes/class.tx_solr_indexerselector.php',
 	'tx_solr_languagefileunavailableexception' => $extensionPath . 'classes/class.tx_solr_languagefileunavailableexception.php',
