@@ -1,5 +1,8 @@
 2011-07-06  Ingo Renner  <ingo.renner@dkd.de>
 
+	* Added garbage collection
+
+
 	* Added support for Record Access Rootline Elements
 	* Fixed an issue where empty facets were not detected correctly when using option showEmptyFacets
 	* Added new marker ###FACET_LINK.FACET_NAME###
